5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1594_2043.log
== TEST (2019-03-26 16:09:27) 
-- CODE:
n1=float(input("nota1: ")
n2=float(input("nota2: ")
n3=float(input("nota3: ")
n4=float(input("nota4: ")

p1=1
p2=2
p3=3
p4=4
			
m=(n1 * p1 + n2 * p2 + n3 * p3 + n4 * p4)
print(round(m/4,2))
-- ERROR:
File "XXXX", line 2
    n2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:09:57) 
-- CODE:
n1=float(input("nota1: ")
n2=float(input("nota2: ")
n3=float(input("nota3: ")
n4=float(input("nota4: ")

p1=1
p2=2
p3=3
p4=4
			
m=(n1 * p1 + n2 * p2 + n3 * p3 + n4 * p4)
print(round(m/4,2))
-- ERROR:
File "XXXX", line 2
    n2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:10:31) 
-- CODE:
n1=float(input("nota: ")
			
n2=float(input("nota: ")
			
n3=float(input("nota: ")
			
n4=float(input("nota: ")

p1=1
p2=2
p3=3
p4=4
			
m=(n1 * p1 + n2 * p2 + n3 * p3 + n4 * p4)
print(round(m/4,2))
-- ERROR:
File "XXXX", line 3
    n2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:11:12) 
-- CODE:
n1=float(input("nota: ")
			
n2=float(input("nota: ")
			
n3=float(input("nota: ")
			
n4=float(input("nota: ")

p1=1
p2=2
p3=3
p4=4
			
m=(n1 * p1 + n2 * p2 + n3 * p3 + n4 * p4)
P=(p1+p2+p3+p4)
			
-- ERROR:
File "XXXX", line 3
    n2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:11:57) 
-- CODE:
n1=float(input("nota: "))
n2=float(input("nota: "))
n3=float(input("nota: "))
n4=float(input("nota: "))

p1=1
p2=2
p3=3
p4=4
			
m=(n1 * p1 + n2 * p2 + n3 * p3 + n4 * p4)
P=(p1+p2+p3+p4)
			
-- ERROR:
File "XXXX", line 3
    n2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:12:32) 
-- CODE:
n1=float(input("nota: "))
n2=float(input("nota: "))
n3=float(input("nota: "))
n4=float(input("nota: "))

p1=1
p2=2
p3=3
p4=4
			
m=(n1 * p1 + n2 * p2 + n3 * p3 + n4 * p4)
P=(p1+p2+p3+p4)

print(round(m/P,2))
			
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:12:42) 
-- CODE:
n1=float(input("nota: "))
n2=float(input("nota: "))
n3=float(input("nota: "))
n4=float(input("nota: "))

p1=1
p2=2
p3=3
p4=4
			
m=(n1 * p1 + n2 * p2 + n3 * p3 + n4 * p4)
P=(p1+p2+p3+p4)

print(round(m/P,2))
			
-- EXECUTION TIME:
0.149732
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
